@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix regression where the association would not construct new finder SQL on save causing bogus queries for "WHERE owner_id = NULL" even after owner was saved.  #8713 [Bryan Helmkamp]
+
 * Refactor association create and build so before & after callbacks behave consistently.  #8854 [lifofifo, mortent]
 
 * Quote table names. Defaults to column quoting.  #4593 [Justin Lynn, gwcoffey, eadz, Dmitry V. Sabanin, Jeremy Kemper]
